Tests almost done for accountRepo and FaqRepo

--- a/Business Ads/UBB-Business-Ads.Tests/UBB-Business-Ads.Tests.csproj
+++ b/Business Ads/UBB-Business-Ads.Tests/UBB-Business-Ads.Tests.csproj
@@ -7,8 +7,12 @@
     <Nullable>enable</Nullable>
 
     <IsPackable>false</IsPackable>
-    <IsTestProject>true</IsTestProject>
+	  <IsTestProject>true</IsTestProject>
   </PropertyGroup>
+
+    <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+	    <CodeAnalysisRuleSet>SE.ruleset</CodeAnalysisRuleSet>
+    </PropertyGroup>    
 
   <ItemGroup>
     <None Remove="stylecop.json" />
@@ -37,6 +41,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Syncfusion.Pdf.Wpf" Version="25.1.41" />
     <PackageReference Include="xunit" Version="2.7.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.5.8">
       <PrivateAssets>all</PrivateAssets>
