--- a/Business Ads/Backend/Backend.csproj
+++ b/Business Ads/Backend/Backend.csproj
@@ -33,6 +33,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Syncfusion.Pdf.Wpf" Version="25.1.41" />
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.6" />
   </ItemGroup>
 
 </Project>
