--- a/Business Ads/Backend/Backend.csproj
+++ b/Business Ads/Backend/Backend.csproj
@@ -20,6 +20,7 @@
 
   <ItemGroup>
     <PackageReference Include="CsvHelper" Version="32.0.0" />
+    <PackageReference Include="EntityFramework" Version="6.4.4" />
     <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Analyzer.Testing.NUnit" Version="1.1.1" />
     <PackageReference Include="Microsoft.CodeAnalysis.Testing.Verifiers.NUnit" Version="1.1.1" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
