--- a/Business Ads/Frontend/Frontend.csproj
+++ b/Business Ads/Frontend/Frontend.csproj
@@ -14,6 +14,10 @@
 	
   <ItemGroup>
     <PackageReference Include="CsvHelper" Version="32.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.5">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
     <None Remove="PaymentsAndBillings\doggo.png" />
     <None Remove="stylecop.json" />
